fix(page-notice,section-notice): spacing and alignment tweaks

--- a/src/less/page-notice/page-notice.less
+++ b/src/less/page-notice/page-notice.less
@@ -26,7 +26,7 @@ span[role="region"].page-notice {
 .page-notice__title {
     font-size: @font-size-regular;
     font-weight: normal;
-    margin: 4px 0 0;
+    margin: 1px 0 0;
 }
 
 /* legacy version with separate bold heading */
@@ -137,12 +137,11 @@ p.page-notice__cta {
 @media (min-width: 601px) {
     section.page-notice,
     div[role="region"].page-notice {
-        flex-wrap: nowrap;
         margin: @spacing-200 0;
     }
 
     .page-notice__title {
-        margin-top: 2px;
+        margin-bottom: 2px;
     }
 
     p.page-notice__cta {
@@ -150,7 +149,7 @@ p.page-notice__cta {
         grid-row: 1;
         justify-self: end;
         margin-bottom: 0;
-        margin-top: 0;
+        margin-top: 1px;
         padding-right: @spacing-200;
     }
 
